# libfs

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/fs/: fs.hpp
src/: CMakeLists.txt  fs.cpp  fs.unix.cpp  fs.win.cpp
test/: CMakeLists.txt  catch.cpp  test.check.cpp  test.cpp  test.io.cpp  test.mode.cpp  test.operation.cpp  test.path.cpp  test.property.cpp  test.split.cpp  test.traversal.cpp  test.type.cpp  test.unix.cpp  test.utils.cpp  test.visit.cpp  test.win.cpp
