# **************************************** #
# libfs: A tiny filesystem utility library #
# Jian Chen <admin@chensoft.com>           #
# http://chensoft.com                      #
# MIT license                              #
# **************************************** #
cmake_minimum_required(VERSION 3.1)
project(libfs VERSION 1.0.0 LANGUAGES CXX)

add_subdirectory(src)
add_subdirectory(test)